Migrate to Java 8 and support graalvm native-image